===v7.0.0===
 * All references from one icon or group to another in TellMeWhen are now tracked by a unique ID that is assigned to an icon that will stay with it no matter where it is moved or exported to.
 ** This includes:
 *** Meta icons
 *** Icon Shown conditions (and the other conditions that track icons)
 *** On Icon Show/On Icon Hide icon events
 *** Group anchoring to other groups
 ** The consequence of this is that you can now import/export icons and meta icons that include those icons separately and they will automatically find eachother once they are all imported.

 * Bug Fixes:
 ** Icons should now always have the correct size after their view changes or the size or ID of a group changes.
 ** Unit cooldown icons should now attempt to show the first usable spell even if no units being checked have casted any spells yet.

===v6.2.4===
 * Added DogTags for string.gsub and string.find.
 * Added Yu'lon's Barrier to the DamageShield equivalency.

 * Bug Fixes:
 ** IconModule_Alpha\Alpha.lua:84: attempt to index local "IconModule_Alpha" (a nil value)
 ** Rune icons will now behave properly when no runes are found that match the types configured for the icon.

===v6.2.3===
 * **Important**: The color settings for all timer bars (including bar group and timer overlay bars) have changed a bit:
 ** The labels for these settings now correctly correspond to the state that they will be used for.
 ** The colors will automatically switch when you enable the "Fill bar up" setting for a bar.
 ** These changes will probably require you to reconfigure some of your settings.

 * Icons in groups that use the Bar display method can now have their colors configured on a per-icon basis.
 ** You can copy colors between icons by right-click dragging one icon to another.

 * TellMeWhen now uses a coroutine-based update engine to help prevent the occasional "script ran too long" error.